# GClip

./: meson.build  solarized-dark.xml
src/: MainWindow.vala  MainWindow.vala~  com.github.maxx730.gclipboard.gschema.xml
ui/: main-window.ui  main-window.ui~
